--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.8.10",
     "@types/react-dom": "16.8.3",
     "dayjs": "^1.8.11",
+    "immer": "^2.1.4",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
