--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.11",
+    "@types/luxon": "^1.12.0",
     "@types/node": "11.12.2",
     "@types/react": "^16.8.10",
     "@types/react-dom": "16.8.3",
-    "dayjs": "^1.8.11",
     "immer": "^2.1.4",
+    "luxon": "^1.12.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
