chore: typescript fixes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.11",
-    "@types/luxon": "^1.12.0",
     "@types/node": "11.12.2",
     "@types/react": "^16.8.10",
     "@types/react-dom": "16.8.3",
@@ -15,8 +14,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "recn": "^0.1.1",
-    "typescript": "3.4.1"
+    "recn": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +32,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "@types/luxon": "^1.24.3",
+    "gh-pages": "^2.0.1",
+    "typescript": "^3.9.7"
   }
 }
